--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand yellowJ" href="../index.html"> <img class="mobileBSLogo appearJ"
-                            src="../assets/bestSandwich logo.png" alt=""></a>
+                            src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -63,11 +63,11 @@
 
                                 <div class="col-1 centerJ disappearJ">
                                     <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
-                                            alt=""></a>
+                                            alt="Best Sandwiches & Smoothies Logo"></a>
                                 </div>
                                 <div class="col yugiJ alignCenterJ disappearJ">
                                     <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
-                                        Smothies</h1>
+                                        Smoothies</h1>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
 
         <div class="row d-sm-block d-md-none">
             <div class="col g-0">
-                <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="">
+                <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="Banh Mi/Sandwich">
             </div>
         </div>
 
@@ -191,7 +191,7 @@
         <div class="row">
             <div class="col g-0 d-none d-lg-block">
                 <img class="menuImage" src="../assssssssssssssssssssssssets/sandwich1.png"
-                    style="width: 870px; height: 797px;" alt="">
+                    style="width: 870px; height: 797px;" alt="Banh Mi/Sandwich">
             </div>
             <div class="col g-0">
                 <div class="line"></div>
@@ -235,14 +235,14 @@
             </div>
             <div class="col g-0 d-none d-lg-block">
                 <img class="menuImage" src="../assssssssssssssssssssssssets/Sandwich2.png"
-                    style="width: 870px; height: 797px;" alt="">
+                    style="width: 870px; height: 797px;" alt="Banh Mi/Sandwich">
             </div>
 
         </div>
         <div class="row topMargin">
             <div class="col g-0 d-none d-lg-block">
                 <img class="menuImage" src="../assssssssssssssssssssssssets/Sandwich3.png"
-                    style="width: 870px; height: 797px;" alt="">
+                    style="width: 870px; height: 797px;" alt="Banh Mi/Sandwich">
             </div>
 
             <div class="col g-0">
@@ -274,14 +274,14 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row centerJ">
-                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">
@@ -291,7 +291,7 @@
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                                <img class="quotesJ" src="./assets/Quotes.png" alt="Quotation Marks">
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">Evelyn D.</p>
@@ -300,21 +300,21 @@
                                 <p class="txtCenterJ">Customer</p>
                             </div>
                             <div class="row centerJ">
-                                <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                                <img class="dotsJ" src="./assets/DotOutline.png" alt="Page dot">
+                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row centerJ">
-                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">
@@ -331,7 +331,7 @@
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                                <img class="quotesJ" src="./assets/Quotes.png" alt="Quotation Marks">
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">Vy N.</p>
@@ -340,21 +340,21 @@
                                 <p class="txtCenterJ">Customer</p>
                             </div>
                             <div class="row centerJ">
-                                <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                                <img class="dotsJ" src="./assets/DotOutline.png" alt="Page dot">
+                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row centerJ">
-                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
-                                <img class="starJ" src="./assets/Star.png" alt="">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">
@@ -365,7 +365,7 @@
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" src="./assets/Quotes.png" alt="">
+                                <img class="quotesJ" src="./assets/Quotes.png" alt="Quotation Marks">
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">Dee M.</p>
@@ -374,9 +374,9 @@
                                 <p class="txtCenterJ">Customer</p>
                             </div>
                             <div class="row centerJ">
-                                <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                                <img class="dotsJ" src="./assets/DotOutline.png" alt="Page dot">
+                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
                             </div>
                         </div>
                     </div>
@@ -424,7 +424,7 @@
             <div class="row sansCollectionJ">
               <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
               <p class="yellowJ footerFontSize">
-                <img src="../assets/phone symbol.png" alt="">
+                <img src="../assets/phone symbol.png" alt="Phone Icon">
                 <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
               </p>
               <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
@@ -438,13 +438,13 @@
             </div>
             <div class="row">
               <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
               </a>
               <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
               </a>
               <a class="footerIconsJ" href="../index.html">
-                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo">
               </a>
             </div>
           </div>
@@ -457,7 +457,7 @@
     <div class="row">
       <div class="col">
         <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="Phone Icon">
           <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
         </p>
         <p class="yellowJ footerFontSize" style="width: 115px;">
@@ -467,13 +467,13 @@
       <div class="col">
         <div class="row rightJ">
           <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
           </a>
           <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
           </a>
           <a class="footerIconsMobileJ" href="../index.html">
-            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo">
           </a>
         </div>
         <div class="row">
