--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <!-- NavBar -->
+<!-- NavBar -->
   <div class="container-fluid">
     <div class="row">
       <nav class="navbar navbar-expand-lg">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col yugiJ alignCenterJ disappearJ">
                   <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
-                    Smothies</h1>
+                    Smoothies</h1>
                 </div>
               </div>
             </div>
@@ -71,6 +71,8 @@
   </div>
 
   <div class="container-fluid pageMargin">
+
+<!-- Top Five -->
     <div class="row">
       <div class="headBox">
         <p>Top Sellers</p>
@@ -80,80 +82,80 @@
       <div class="row disappearJ bgWhite">
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard1.png" class="card-img-top" alt="...">
+            <img src="../assets/drinkCard1.png" class="card-img-top" alt="Tangy Taro">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">#1 Favorite
               <div class="sandwichTxtT2 topFiveTxt">Tangy Taro</div> $5.89</p>
               <div class="row starRowJ">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
               </div>
             </div>
           </div>
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard2.png" class="card-img-top" alt="...">
+            <img src="../assets/drinkCard2.png" class="card-img-top" alt="Green Tea Gangbusters">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT ">"The Go To Drink"
               <div class="topFiveTxt">Green Tea Gangbusters</div> $5.89</p>
               <div class="row starRowJ">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
               </div>
             </div>
           </div>
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard3.png" class="card-img-top" alt="...">
+            <img src="../assets/drinkCard3.png" class="card-img-top" alt="Iced Thai Tea">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">Top Seller
               <div class="sandwichTxtT2 topFiveTxt">Iced Thai Tea</div> $5.69</p>
               <div class="row starRowJ">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
               </div>
             </div>
           </div>
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard4.png" class="card-img-top" alt="...">
+            <img src="../assets/drinkCard4.png" class="card-img-top" alt="Appealing Avocado">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">#1 Recommended
               <div class="topFiveTxt">Appealing Avocado</div> $5.89</p>
               <div class="row starRowJ">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
               </div>
             </div>
           </div>
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard5.png" class="card-img-top" alt="...">
+            <img src="../assets/drinkCard5.png" class="card-img-top" alt="Honeydew Milk Tea">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">#2 Recommended
-              <div class="topFiveTxt"> HoneyDew Milk Tea</div> $5.69</p>
+              <div class="topFiveTxt"> Honeydew Milk Tea</div> $5.69</p>
               <div class="row starRowJ">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
-                <img class="star2J" src="../assets/Star.png" alt="">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
+                <img class="star2J" src="../assets/Star.png" alt="picture of star">
               </div>
             </div>
           </div>
@@ -162,7 +164,7 @@
     </div>
     <div class="row d-sm-block d-md-none">
       <div class="col g-0">
-        <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="">
+        <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="Banh mi/sandwich">
       </div>
     </div>
     <div class="row">
@@ -174,7 +176,7 @@
 
 
 
-    <!-- Drinks Menu -->
+<!-- Drinks Menu -->
     <div class="row">
       <div class="col g-0">
         <div class="line"></div>
@@ -193,7 +195,7 @@
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 110px;">
           <img class="menuImage" src="../assssssssssssssssssssssssets/boba.jpg"
-            style="float: right;width:652px;height:482px; object-fit: cover;" alt="">
+            style="float: right;width:652px;height:482px; object-fit: cover;" alt="Assortment of boba toppings">
         </div>
 
       </div>
@@ -215,7 +217,7 @@
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 92px;">
           <img class="menuImage" src="../assssssssssssssssssssssssets/drink2.jpg"
-            style="float: right;width:652px;height:378px; object-fit: cover" alt="">
+            style="float: right;width:652px;height:378px; object-fit: cover" alt="Glasses of milk tea">
         </div>
       </div>
     </div>
@@ -237,7 +239,7 @@
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 116px;">
           <img class="menuImage" src="../assssssssssssssssssssssssets/drink3.jpg"
-            style="float: right;width:652px;height:361px; object-fit: cover" alt="">
+            style="float: right;width:652px;height:361px; object-fit: cover" alt="Milk tea boba drink">
         </div>
       </div>
     </div>
@@ -261,7 +263,7 @@
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 112px;">
           <img class="menuImage" src="../assssssssssssssssssssssssets/drink4.jpg"
-            style="float: right;width:652px;height:545px; object-fit: cover" alt="">
+            style="float: right;width:652px;height:545px; object-fit: cover" alt="Strawberry smoothie">
         </div>
       </div>
     </div>
@@ -285,26 +287,26 @@
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 76px;">
           <img class="menuImage" src="../assssssssssssssssssssssssets/drink5.png"
-            style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="">
+            style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="Strawberry slush">
         </div>
       </div>
     </div>
 
-    <!-- Yelp Review -->
+<!-- Yelp Review -->
 
 
     <div id="carouselExample" class="carousel slide bgWhite d-none d-lg-block">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.png" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.png" alt="Customer profile picture">
           </div>
           <div class="row centerJ">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
           </div>
           <div class="row">
             <p class="txtCenterJ">
@@ -315,7 +317,7 @@
             </p>
           </div>
           <div class="row centerJ">
-            <img class="quotesJ" src="../assets/Quotes.png" alt="">
+            <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
           </div>
           <div class="row">
             <p class="txtCenterJ">Nely L.</p>
@@ -324,21 +326,21 @@
             <p class="txtCenterJ">Customer</p>
           </div>
           <div class="row centerJ">
-            <img class="dotsJ" src="../assets/DotOutline.png" alt="">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
+            <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
+            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
           </div>
         </div>
         <div class="carousel-item">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/Review2.png" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/Review2.png" alt="Customer profile picture">
           </div>
           <div class="row centerJ">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
           </div>
           <div class="row">
             <p class="txtCenterJ">
@@ -350,7 +352,7 @@
             </p>
           </div>
           <div class="row centerJ">
-            <img class="quotesJ" src="../assets/Quotes.png" alt="">
+            <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
           </div>
           <div class="row">
             <p class="txtCenterJ">Jeremy B.</p>
@@ -359,21 +361,21 @@
             <p class="txtCenterJ">Customer</p>
           </div>
           <div class="row centerJ">
-            <img class="dotsJ" src="../assets/DotOutline.png" alt="">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
+            <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
+            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
           </div>
         </div>
         <div class="carousel-item">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review3.png" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review3.png" alt="Customer profile picture">
           </div>
           <div class="row centerJ">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
-            <img class="starJ" src="../assets/Star.png" alt="">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
+            <img class="starJ" src="../assets/Star.png" alt="picture of star">
           </div>
           <div class="row">
             <p class="txtCenterJ">
@@ -382,7 +384,7 @@
             </p>
           </div>
           <div class="row centerJ">
-            <img class="quotesJ" src="../assets/Quotes.png" alt="">
+            <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
           </div>
           <div class="row">
             <p class="txtCenterJ">Arianna P.</p>
@@ -391,9 +393,9 @@
             <p class="txtCenterJ">Customer</p>
           </div>
           <div class="row centerJ">
-            <img class="dotsJ" src="../assets/DotOutline.png" alt="">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="">
+            <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
+            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
           </div>
         </div>
       </div>
@@ -410,7 +412,7 @@
 
 
 
-  <!-- Footer -->
+<!-- Footer -->
 
   <hr class="yellowJ hrLineJ hrMargin">
 
@@ -439,7 +441,7 @@
             <div class="row sansCollectionJ">
               <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
               <p class="yellowJ footerFontSize">
-                <img src="../assets/phone symbol.png" alt="">
+                <img src="../assets/phone symbol.png" alt="Phone Icon">
                 <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
               </p>
               <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
@@ -453,13 +455,13 @@
             </div>
             <div class="row">
               <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
               </a>
               <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
               </a>
               <a class="footerIconsJ" href="../index.html">
-                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo">
               </a>
             </div>
           </div>
@@ -472,7 +474,7 @@
     <div class="row">
       <div class="col">
         <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="">
+          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="Phone Icon">
           <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
         </p>
         <p class="yellowJ footerFontSize" style="width: 115px;">
@@ -482,13 +484,13 @@
       <div class="col">
         <div class="row rightJ">
           <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="">
+            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
           </a>
           <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="">
+            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
           </a>
           <a class="footerIconsMobileJ" href="../index.html">
-            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="">
+            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo">
           </a>
         </div>
         <div class="row">
